# InferenceBridge

./: .gitattributes  .gitignore  API-ARCHITECTURE.md  AUDIT-FINDINGS.md  INFERENCEBRIDGE_SETTINGS_REVIEW_2026-07.md  LICENSE  README.md  build.ps1  index.html  inference-bridge.example.toml  package-lock.json  package.json
docs/: 01-migration-design-note.md  02-architecture.md  03-implementation-plan.md  (+20 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.inference-bridge/: sessions.db
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  logging.rs  main.rs  providers.rs  replay.rs  state.rs
src-tauri/src/api/: completions.rs  embeddings.rs  errors.rs  extensions.rs  health.rs  messages.rs  metrics.rs  mod.rs  models.rs  responses.rs  runtime.rs  server.rs  upstream.rs
src-tauri/src/commands/: benchmark.rs  browse.rs  chat.rs  context.rs  debug.rs  image.rs  mod.rs  model.rs  session.rs  settings.rs
src-tauri/src/context/: compressor.rs  mod.rs  strategy.rs  tracker.rs
src-tauri/src/engine/: benchmark.rs  client.rs  download.rs  mod.rs  process.rs  scheduler.rs  streaming.rs
src-tauri/src/image_generation/: mod.rs
src-tauri/src/models/: gguf.rs  mod.rs  overrides.rs  profiles.rs  registry.rs  scanner.rs  sidecars.rs
src-tauri/src/normalize/: agent_action.rs  capability_truth.rs  events.rs  images.rs  json_repair.rs  mod.rs  parse_trace.rs  think_strip.rs  tool_extract.rs  tool_extract.rs.bak
src-tauri/src/session/: db.rs  export.rs
src-tauri/src/templates/: builtin.rs  engine.rs  mod.rs  patches.rs
(+72 files in other folders)
