[package]
name = "inference-bridge"
version = "0.1.0"
edition = "2021"
description = "Local LLM desktop app with a shared OpenAI-compatible API"

[lib]
name = "inference_bridge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures-util = "0.3"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
glob = "0.3"
regex = "1"
dirs = "5"
zip = "2"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
percent-encoding = "2"
